Change image extensions
All aextensions are changed to webp

--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@
                 overflow: hidden;
             }                
             .container {
-                background-image: url("../images/suitcases.jpg");
+                background-image: url("../images/suitcases.webp");
                 background-position: bottom;
                 background-repeat: no-repeat;
                 background-size: cover;
