--- a/view/accommodation.html
+++ b/view/accommodation.html
@@ -62,25 +62,25 @@
         <section class="section-first">
             <figure>
                 <a href="#transport" onclick="showLocalTransport()">
-                  <img src="../images/hotel.jpeg"  alt="hotel">
+                  <img src="../images/hotel.webp"  alt="hotel">
                   <figcaption>Hotel</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#food" onclick="showFood()">
-                  <img src="../images/hostel.jpeg"  alt="hostel">
+                  <img src="../images/hostel.webp"  alt="hostel">
                   <figcaption>Hostel</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#safety" onclick="showSafety()">
-                  <img src="../images/apartmant.jpeg"  alt="apartmant">
+                  <img src="../images/apartmant.webp"  alt="apartmant">
                   <figcaption>Apartment</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#culture" onclick="showLocalCulture()">
-                  <img src="../images/home.jpeg"  alt="house">
+                  <img src="../images/home.webp"  alt="house">
                   <figcaption>House</figcaption>
                 </a>
             </figure>
@@ -105,7 +105,7 @@
                     <div class="user-comment">
                         <form>
                             <div class="provider">
-                                <img class="provider-logo" src="../images/accomodation_logo.jpg">
+                                <img class="provider-logo" src="../images/accomodation_logo.webp">
                                 <h2>Add feedback about Hotel</h2>
                                 <div>
                                     <span class="heading">User Rating</span>
@@ -178,7 +178,7 @@
 
             <div class="comment" id="comment1">
                 <div class="user">
-                    <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                    <img class="avatar" src="../images/traveler.webp" alt="user">
 
                     <p>Author: Pera Peric</p>
                     <p>Date:01.01.2013</p>
@@ -207,7 +207,7 @@
             </div>
             <div class="comment" id="comment2">
                 <div class="user">
-                    <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                    <img class="avatar" src="../images/traveler.webp" alt="user">
 
                     <p>Author: Dusko Dugousko</p>
                     <p>Date:02.02.2019</p>
@@ -235,7 +235,7 @@
 
             <div class="comment" id="comment3">
                 <div class="user">
-                    <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                    <img class="avatar" src="../images/traveler.webp" alt="user">
 
                     <p>Author: Marko Markovic</p>
                     <p>Date:03.03.2003</p>
