--- a/view/enjoy.html
+++ b/view/enjoy.html
@@ -119,7 +119,7 @@
                 <div class="provider-div">
 
                     <div class="provider">
-                        <img class="provider-logo" src="../images/logoavio1.png">
+                        <img class="provider-logo" src="../images/logoavio1.webp">
 
                         <h2>Provider name: AirSerbia
                             <br>Type: Airplane
@@ -257,7 +257,7 @@
 
                                     <div class="comment" id="comment1">
                                         <div class="user">
-                                            <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                                            <img class="avatar" src="../images/traveler.webp" alt="user">
 
                                             <p>Author: Pera Peric</p>
                                             <p>Date:01.01.2013</p>
@@ -286,7 +286,7 @@
                                     </div>
                                     <div class="comment" id="comment2">
                                         <div class="user">
-                                            <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                                            <img class="avatar" src="../images/traveler.webp" alt="user">
 
                                             <p>Author: Dusko Dugousko</p>
                                             <p>Date:02.02.2019</p>
@@ -314,7 +314,7 @@
 
                                     <div class="comment" id="comment3">
                                         <div class="user">
-                                            <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                                            <img class="avatar" src="../images/traveler.webp" alt="user">
 
                                             <p>Author: Marko Markovic</p>
                                             <p>Date:03.03.2003</p>
@@ -363,7 +363,7 @@
                 <div class="userComment">
                     <form>
                         <div class="provider">
-                            <img class="provider-logo" src="../images/logoavio1.png">
+                            <img class="provider-logo" src="../images/logoavio1.webp">
                             <h2>Add feedback about AirSerbia</h2>
                             <div>
                                 <span class="heading">User Rating</span>
