--- a/view/feedback.html
+++ b/view/feedback.html
@@ -53,19 +53,19 @@
         <section class="section-first">            
                 <figure>
                     <a href="./life.html">
-                        <img src="../images/friends.jpeg" alt="friends">
+                        <img src="../images/friends.webp" alt="friends">
                         <figcaption>Life in...</figcaption>
                     </a>
                 </figure>
                 <figure>
                     <a href="accommodation.html">
-                        <img src="../images/accomodation.jpg" alt="accommodation">
+                        <img src="../images/accomodation.webp" alt="accommodation">
                         <figcaption>Accommodation</figcaption>
                     </a>
                 </figure>
                 <figure>
                     <a href="enjoy.html">
-                        <img src="../images/world.jpg" alt="enjoy">
+                        <img src="../images/world.webp" alt="enjoy">
                         <figcaption>Enjoy in travel</figcaption>
                     </a>
                 </figure>
