--- a/view/life.html
+++ b/view/life.html
@@ -53,31 +53,31 @@
         <section class="section-first">
             <figure>
                 <a href="#transport" onclick="showLocalTransport()">
-                  <img src="../images/astronaut.jpg"  alt="space">
+                  <img src="../images/astronaut.webp"  alt="space">
                   <figcaption>Local transport</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#food" onclick="showFood()">
-                  <img src="../images/breakfast.jpg"  alt="food">
+                  <img src="../images/breakfast.webp"  alt="food">
                   <figcaption>Food & Entertainment</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#safety" onclick="showSafety()">
-                  <img src="../images/friends.jpeg"  alt="hands">
+                  <img src="../images/friends.webp"  alt="hands">
                   <figcaption>Safety</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#culture" onclick="showLocalCulture()">
-                  <img src="../images/world.jpg"  alt="earth">
+                  <img src="../images/world.webp"  alt="earth">
                   <figcaption>Local culture</figcaption>
                 </a>
             </figure>
             <figure>
                 <a href="#airport" onclick="showAirport()">
-                  <img src="../images/airplane.jpg"  alt="airplane">
+                  <img src="../images/airplane.webp"  alt="airplane">
                   <figcaption>Airport</figcaption>
                 </a>
             </figure>
@@ -101,7 +101,7 @@
                         <div class="user-comment">
                             <form>
                                 <div class="provider">
-                                    <img class="provider-logo" src="../images/logoavio1.png">
+                                    <img class="provider-logo" src="../images/logoavio1.webp">
                                     <h2>Add feedback about AirSerbia</h2>
                                     <div>
                                         <span class="heading">User Rating</span>
@@ -168,7 +168,7 @@
                         <h2>Show Comments:</h2>
                         <div class="comment" id="comment1">
                             <div class="user">
-                                <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                                <img class="avatar" src="../images/traveler.webp" alt="user">
                                 <p>Author: Pera Peric</p>
                                 <p>Date:01.01.2013</p>
                             </div>
@@ -195,7 +195,7 @@
                         </div>
                         <div class="comment" id="comment2">
                             <div class="user">
-                                <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                                <img class="avatar" src="../images/traveler.webp" alt="user">
                                 <p>Author:<br> Dusko Dugousko</p>
                                 <p>Date:02.02.2019</p>
                             </div>
@@ -221,7 +221,7 @@
                         </div>
                         <div class="comment" id="comment3">
                             <div class="user">
-                                <img class="avatar" src="../images/traveler.jpeg" alt="user">
+                                <img class="avatar" src="../images/traveler.webp" alt="user">
                                 <p>Author: Marko Markovic</p>
                                 <p>Date:03.03.2003</p>
                             </div>
