--- a/view/providers.html
+++ b/view/providers.html
@@ -58,7 +58,7 @@
                 <div class="provider-div ">
                     <div class="provider ">
                         <div class="left">
-                        <img class="provider-logo " src="../images/logoavio1.png ">
+                        <img class="provider-logo " src="../images/logoavio1.webp ">
                         <h2>Provider name: AirSerbia
                             <br>Type: Airplane
                         </h2>
