--- a/view/start.html
+++ b/view/start.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Tatjana Markovic, tanja120a@gmail.com">
+    <meta name="description" content="Responsive app about travel information. Techniques: Vanilla JavaScript, HTML, CSS, Sass, jQuery, fetch  JSON, session and local storage. To use the app, you need to log in E-shop .">
+    <meta name="copyright" content="Tatjana Markovic" >
+    <meta name="owner" content="Tatjana Markovic">
+    <meta name="url" content="https://www.tatjama.github.io/business-travel-agency">
+    <meta name="subject" content="Business travel app with information about different destinations. Users allowed to give feedback and to see others feedback"/>
+    <link rel="icon" href="./images/travel-and-tourism.png">
     <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -49,6 +56,7 @@
 
     <footer id="podnozje">
         <p>Beograd, Milutina Milankovica 1, 011-111-1111</p>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/dighital" title="Dighital">Dighital</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
 
     <script src="../js/main.js"></script>
